# StudyMood

./: README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  rust.yml
backend/: Cargo.toml  Dockerfile  studydb.sql
backend/src/: api.rs  main.rs
backend/src/api/: db.rs  mod.rs
backend/src/api/entities/: mod.rs  streaks.rs  todo.rs  user.rs
backend/src/api/routes/: auth.rs  mod.rs  music.rs  streaks.rs  todo.rs  user.rs
backend/src/api/services/: email.rs  jwt.rs  loader.rs  mod.rs  music.rs  streaks.rs  todo.rs  token.rs  user.rs
frontend/: index.html  profile.html  stream.html
frontend/assets/scripts/: messages.js  music-api.js  profile.js  streaks.js  theme.js  todos.js
frontend/assets/styles/: audio.css  default.css  header.css  login.css  mobile.css  stream_options.css  todos.css
frontend/errors/: 404.html  50x.html
nginx/: default.conf
