[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
dotenvy = "0.15.7"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
walkdir = "2.5.0"
sea-orm = { version = "1.1.14", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
serde_json = "1.0.140"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }

[patch.crates-io]
rsa = { git = "https://github.com/RustCrypto/RSA.git", branch = "0-9-x" }
